--- a/aafirstTry/menu/css/menu-onPage.css
+++ b/aafirstTry/menu/css/menu-onPage.css
@@ -1,6 +1,6 @@
 .discover-display {
-  background-color: #C4C3B7; 
   /* can change for a background image */
+  background-color: #C4C3B7; 
 }
 
 .discover-block {
@@ -43,4 +43,25 @@ margin-bottom: 4rem;
   border-left:1px black solid;
   border-right:1px black solid;
   margin:1rem;
+}
+
+/* from js */
+
+.menuTable{
+  border:#D61C22 solid 2px;
+  width: 70%;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.menuTable > div {
+  display: flex;
+  justify-content: space-between;
+
+}
+
+
+
+.menu h2 {
+  margin:3rem;
 }
