--- a/styles/index.css
+++ b/styles/index.css
@@ -96,6 +96,17 @@ a:hover {
   transition: 0.3s;
 } 
 
+.text a {
+  color:rgba(0, 0, 0, 0.8);
+  font-family: montserrat;
+}
+
+.text a:hover{
+  color:#ec1d25;
+  transition: 0.4s;
+  cursor:pointer
+}
+
 
 .welcome-display:hover .welcome-display-1 .arrow{
   opacity: 0.3; 
